fixed another typo, added the cmake.in file I forgot to add.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ install(TARGETS ${PROJECT_NAME}
 install(EXPORT
     ${PROJECT_NAME}
     FILE ${PROJECT_NAME}-targets.cmake
-    DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}.cmake
+    DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}/cmake
     NAMESPACE ${PROJECT_NAME}::
 )
 configure_file(
